--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 <body>
     <div class="parent">
         <header>Header</header>
+        <div class="box">Here is the info</div>
+        <div class="box">Slightly larger box
+            <h1> Title within the box </h1>
+        </div>
         <div class="box">Small Box</div>
         <div class="box">Small Box</div>
-        <div class="box">Small Box</div>
-        <div class="box">Small Box</div>
-        <div class="box">Small Box</div>
+        <div class="box">Small Box
+            <li>This is list</li>
+            <li>More items </li>
+            <li>More items </li>
+            <li>More items </li>
+            <li>More items </li>
+        </div>
         <footer>Footer</footer>
         <span class="dot1"></span>
         <span class="dot2"></span>
